plugins {
    id 'com.android.application'
}
android {
    namespace 'com.example.storymaker'
    compileSdkVersion 33
    defaultConfig {
        applicationId 'work.mywild.socialstory'
        minSdk 25
        versionCode 1
        versionName '1.0.0'
        multiDexEnabled true
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    lintOptions {
        checkReleaseBuilds false
        abortOnError false
    }
}

tasks.withType(JavaCompile).configureEach{
    options.fork = true
    options.forkOptions.jvmArgs +=[
            '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
}
dependencies {

    testImplementation 'junit:junit:4.+'
    androidTestImplementation 'androidx.test:runner:1.5.2'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    implementation 'com.google.android.material:material:1.5.0'
    implementation 'androidx.appcompat:appcompat:1.6.1'

    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'com.android.support:multidex:1.0.3'
    implementation 'com.github.GrenderG:Toasty:1.5.0'
    implementation 'jp.co.cyberagent.android:gpuimage:2.0.3'

    implementation 'io.github.h07000223:flycoTabLayout:3.0.0'
    implementation 'com.github.florent37:shapeofview:1.4.7'
    implementation 'com.karumi:dexter:6.2.3'
    implementation 'com.github.yalantis:ucrop:2.2.8'
    implementation 'jp.wasabeef:blurry:4.0.1'
    implementation 'com.github.warkiz.widget:indicatorseekbar:2.1.2'
    implementation 'devlight.io:navigationtabbar:1.2.5'
    implementation 'com.jaredrummler:material-spinner:1.3.1'
    implementation 'com.alibaba:fastjson:1.2.73'
    implementation 'com.jakewharton:butterknife:10.2.3'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'


    implementation 'com.github.bumptech.glide:glide:4.16.0'
    implementation 'jp.wasabeef:glide-transformations:4.0.1'
    implementation 'com.google.code.gson:gson:2.10.1'


    implementation 'com.airbnb.android:lottie:6.1.0'
    implementation 'com.android.volley:volley:1.2.1'
    implementation 'com.intuit.sdp:sdp-android:1.1.0'
    implementation 'com.google.android.gms:play-services-ads:22.4.0'


}